--- a/app/src/main/res/layout/email_password.xml
+++ b/app/src/main/res/layout/email_password.xml
@@ -23,8 +23,9 @@
         android:layout_height="wrap_content"
         android:hint="Password"
         android:inputType="textPassword"
-        android:padding="10dp"
-        android:marginBottom="16dp" />
+        android:marginBottom="16dp"
+        android:minHeight="48dp"
+        android:padding="10dp" />
 
     <!-- Ползунки -->
     <SeekBar
