--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center"
-        android:src="@drawable/ic_launcher_foreground"
+        android:src="@drawable/sf_recognition"
         android:contentDescription="@string/logo_description" />
 
     <!-- Пространство между логотипом и кнопками -->
