--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,29 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SplashActivity">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/gifimageView"
-        android:layout_width="37dp"
-        android:layout_height="22dp"
-        android:contentDescription="@string/received_image_desc"
-        android:visibility="invisible"
-        tools:ignore="MissingConstraints" />
-
-    <!-- ImageView for displaying received photo -->
-    <ImageView
-        android:id="@+id/gifImageView"
+    <!-- VideoView для отображения MP4 -->
+    <VideoView
+        android:id="@+id/videoView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="@string/received_image_desc"
-        android:scaleType="centerCrop"
-        android:visibility="visible" />
-
-    <!-- Add any other UI components for the splash activity here -->
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:scaleType="centerCrop" />
+</RelativeLayout>
