--- a/app/src/main/res/layout/photo_number.xml
+++ b/app/src/main/res/layout/photo_number.xml
@@ -32,4 +32,11 @@
         android:layout_marginTop="16dp"
         android:text="Open Camera" />
 
+    <Button
+        android:id="@+id/openCameraButton3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Photo" />
+
 </LinearLayout>
