--- a/app/src/main/res/layout/activity_stolen_cars.xml
+++ b/app/src/main/res/layout/activity_stolen_cars.xml
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.camera.view.PreviewView
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/previewView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center" />
+    android:layout_height="match_parent">
+
+    <!-- Камера -->
+    <androidx.camera.view.PreviewView
+        android:id="@+id/previewView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center" />
+
+    <!-- Наложение сетки -->
+    <com.example.sensfusion.OverlayView
+        android:id="@+id/overlayView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</FrameLayout>
