--- a/app/src/main/res/layout/activity_stolen_cars.xml
+++ b/app/src/main/res/layout/activity_stolen_cars.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -11,10 +10,18 @@
         android:layout_height="match_parent"
         android:layout_gravity="center" />
 
-    <!-- Наложение сетки -->
+    <!-- Наложение с размытой областью -->
     <com.example.sensfusion.OverlayView
         android:id="@+id/overlayView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <!-- Кнопка фиксации изображения -->
+    <Button
+        android:id="@+id/captureButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="32dp"
+        android:text="Capture" />
 </FrameLayout>
