--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,7 +10,7 @@
         android:id="@+id/neuronsBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#000000" />
+        android:background="@color/black" />
 
     <!-- Основной контент -->
     <LinearLayout
@@ -24,7 +26,7 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <!-- Кнопки в нижней части -->
+        <!-- Виджеты в нижней части -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -33,41 +35,111 @@
             android:weightSum="3"
             android:padding="8dp">
 
-            <!-- Кнопка Settings -->
-            <Button
-                android:id="@+id/settingsButton"
+            <!-- Виджет Settings -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/settingsWidget"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
-                android:layout_margin="8dp"
+                android:layout_height="120dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/green"
-                android:text="Settings"
-                android:textColor="#FFFFFF"
-                android:textSize="16sp" />
+                android:layout_margin="8dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="8dp">
 
-            <!-- Кнопка Stolen Car -->
-            <Button
-                android:id="@+id/stolenCarButton"
-                android:layout_width="0dp"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:layout_margin="8dp"
-                android:text="Stolen Car"
-                android:textColor="#FFFFFF"
-                android:textSize="18sp"
-                android:backgroundTint="@color/red" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:padding="8dp"
+                    tools:ignore="ExtraText">
 
-            <!-- Кнопка Car Number -->
-            <Button
-                android:id="@+id/carNumberButton"
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_settings" />
+                        //app:tint="@color/green" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="Settings"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:gravity="center" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <!-- Виджет Stolen Car -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/stolenCarWidget"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="120dp"
                 android:layout_weight="1"
                 android:layout_margin="8dp"
-                android:text="Car Number"
-                android:textColor="#FFFFFF"
-                android:textSize="18sp"
-                android:backgroundTint="@color/blue" />
+                app:cardCornerRadius="16dp"
+                app:cardElevation="8dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:padding="8dp">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_car" />
+                        //app:tint="@color/red" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="Stolen Car"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:gravity="center" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <!-- Виджет Car Number -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/carNumberWidget"
+                android:layout_width="0dp"
+                android:layout_height="120dp"
+                android:layout_weight="1"
+                android:layout_margin="8dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="8dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:padding="8dp">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_number" />
+                        //app:tint="@color/blue" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="Car Number"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:gravity="center" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
