--- a/app/src/main/res/layout/barrier.xml
+++ b/app/src/main/res/layout/barrier.xml
@@ -7,6 +7,18 @@
     android:layout_height="match_parent"
     tools:context=".BarrierActivity">
 
+    <!-- Радар -->
+    <com.example.sensfusion.RadarView
+        android:id="@+id/radarView"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        tools:ignore="MissingClass" />
+
+    <!-- Кнопка Открыть шлагбаум -->
     <androidx.cardview.widget.CardView
         android:id="@+id/openBarrierButton"
         android:layout_width="0dp"
@@ -16,7 +28,7 @@
         app:cardElevation="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/closeBarrierButton"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/radarView">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,6 +51,7 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
+    <!-- Кнопка Закрыть шлагбаум -->
     <androidx.cardview.widget.CardView
         android:id="@+id/closeBarrierButton"
         android:layout_width="0dp"
@@ -48,7 +61,7 @@
         app:cardElevation="8dp"
         app:layout_constraintStart_toEndOf="@id/openBarrierButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/radarView">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -71,6 +84,7 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
+    <!-- Кнопка Настройки Bluetooth -->
     <androidx.cardview.widget.CardView
         android:id="@+id/bluetoothSettingsButton"
         android:layout_width="0dp"
