--- a/app/src/main/res/layout/barrier.xml
+++ b/app/src/main/res/layout/barrier.xml
@@ -7,6 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".BarrierActivity">
 
+    <TextView
+        android:id="@+id/connectedDeviceTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="No device connected"
+        android:textSize="16sp"
+        android:textColor="@android:color/black"
+        tools:ignore="MissingConstraints" />
+
     <!-- Радар -->
     <com.example.sensfusion.RadarView
         android:id="@+id/radarView"
@@ -95,6 +106,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/openBarrierButton">
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
