--- a/app/src/main/res/layout/barrier.xml
+++ b/app/src/main/res/layout/barrier.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,8 +13,8 @@
         android:layout_marginTop="16dp"
         android:gravity="center"
         android:text="No device connected"
-        android:textSize="16sp"
         android:textColor="@android:color/black"
+        android:textSize="16sp"
         tools:ignore="MissingConstraints" />
 
     <!-- Радар -->
@@ -23,10 +22,10 @@
         android:id="@+id/radarView"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingClass" />
 
     <!-- Кнопка Открыть шлагбаум -->
@@ -37,8 +36,8 @@
         android:layout_margin="16dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="8dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/closeBarrierButton"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/radarView">
 
         <LinearLayout
@@ -47,18 +46,12 @@
             android:gravity="center"
             android:orientation="vertical"
             android:padding="8dp">
+
             <ImageView
-                android:layout_width="64dp"
-                android:layout_height="64dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:contentDescription="Open Barrier"
                 android:src="@drawable/barrier_open" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Открыть"
-                android:textColor="@android:color/white"
-                android:textSize="16sp"
-                android:layout_marginTop="8dp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -70,8 +63,8 @@
         android:layout_margin="16dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="8dp"
-        app:layout_constraintStart_toEndOf="@id/openBarrierButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/openBarrierButton"
         app:layout_constraintTop_toBottomOf="@id/radarView">
 
         <LinearLayout
@@ -80,18 +73,12 @@
             android:gravity="center"
             android:orientation="vertical"
             android:padding="8dp">
+
             <ImageView
-                android:layout_width="64dp"
-                android:layout_height="64dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:contentDescription="Close Barrier"
                 android:src="@drawable/barrier_closed" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Закрыть"
-                android:textColor="@android:color/white"
-                android:textSize="16sp"
-                android:layout_marginTop="8dp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -103,10 +90,9 @@
         android:layout_margin="16dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="8dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/openBarrierButton">
-
 
 
         <LinearLayout
@@ -115,18 +101,12 @@
             android:gravity="center"
             android:orientation="vertical"
             android:padding="8dp">
+
             <ImageView
-                android:layout_width="64dp"
-                android:layout_height="64dp"
+                android:layout_width="379dp"
+                android:layout_height="120dp"
                 android:contentDescription="Bluetooth Settings"
                 android:src="@drawable/bluetooth" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Настройки Bluetooth"
-                android:textColor="@android:color/white"
-                android:textSize="16sp"
-                android:layout_marginTop="8dp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
