--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Фон с анимацией нейронов -->
-    <com.example.sensfusion.NeuronsBackgroundView
-        android:id="@+id/neuronsBackground"
+    <!-- Фон с изображением -->
+    <ImageView
+        android:id="@+id/backgroundImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/back2" />
 
     <!-- Основной контент -->
     <LinearLayout
@@ -23,7 +24,7 @@
         <!-- Пространство между логотипом и кнопками -->
         <Space
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1" />
 
         <!-- Первый ряд кнопок -->
