--- a/app/src/main/res/layout/photo_number.xml
+++ b/app/src/main/res/layout/photo_number.xml
@@ -1,55 +1,63 @@
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:fillViewport="true">
 
-    <!-- Поле для ввода текста -->
-    <EditText
-        android:id="@+id/editTextNumber"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Car Number"
-        android:inputType="text"
-        android:maxLength="8"
-        android:minHeight="48dp"
-        android:padding="10dp" />
+        android:orientation="vertical"
+        android:padding="16dp">
 
-    <!-- Кнопка отправки текста -->
-    <Button
-        android:id="@+id/sendButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Send" />
+        <!-- Поле для ввода текста -->
+        <EditText
+            android:id="@+id/editTextNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Car Number"
+            android:inputType="text"
+            android:maxLength="8"
+            android:minHeight="48dp"
+            android:padding="10dp" />
 
-    <!-- Кнопка для открытия камеры -->
-    <Button
-        android:id="@+id/openCameraButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Open Camera" />
+        <!-- Кнопка отправки текста -->
+        <Button
+            android:id="@+id/sendButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Send" />
 
-    <Button
-        android:id="@+id/openCameraButton3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Photo" />
+        <!-- Кнопка для открытия камеры -->
+        <Button
+            android:id="@+id/openCameraButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Open Camera" />
 
-    <ImageView
-        android:id="@+id/selectedImageView"
-        android:layout_width="match_parent"
-        android:layout_height="354dp"
-        android:scaleType="fitCenter"
-        android:contentDescription="Selected Image" />
+        <Button
+            android:id="@+id/openCameraButton3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Photo" />
 
-    <Button
-        android:id="@+id/send_photo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="SEND" />
+        <!-- Отображение выбранного изображения -->
+        <ImageView
+            android:id="@+id/selectedImageView"
+            android:layout_width="match_parent"
+            android:layout_height="354dp"
+            android:scaleType="fitCenter"
+            android:contentDescription="Selected Image" />
 
-</LinearLayout>
+        <!-- Кнопка для отправки изображения -->
+        <Button
+            android:id="@+id/send_photo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="SEND" />
+
+    </LinearLayout>
+</ScrollView>
